testing fix for filter blur on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* test */
+* {
+    -webkit-appearance: none
+}
+
 @layer utilities {
     .my-link-style:active {
         background-color: black;
